8315029: [BACKOUT] Generational ZGC: Tests crash with assert(index == 0 || is_power_of_2(index))

Reviewed-by: chagedorn, mdoerr